Fix  - Front/All pages overflow-X error

--- a/src/assets/utils/_custom.scss
+++ b/src/assets/utils/_custom.scss
@@ -1,6 +1,11 @@
+// *{
+//   overflow: hidden;
+// }
+
 // body
 body{
   padding-right: 0px !important;
+  overflow-x: hidden;
 }
 
 // z_index
